# propulsion

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: project.mdc
benchmarking/: README.md
benchmarking/_template/: README.md
benchmarking/_template/photos/: .gitkeep
benchmarking/dys-d2830-1000kv/: README.md
benchmarking/mit-katz-modular-actuator/: README.md
builds/3n4p/: README.md
builds/3n4p/v1/: README.md
builds/3n4p/v2/: README.md
builds/3n4p/v3/: README.md
docs/: README.md  assembly-magnets-windings.md  bom.md  cad-build-guide.md  onshape-session.md  simulator.md
src/bldc_sim/: __init__.py  app.py
src/bldc_sim/geometry/: cross_section.py
src/bldc_sim/models/: equations.py  magnetic.py  motor.py  winding.py
src/bldc_sim/presets/: n3p4.py
tests/: test_models.py
